--- a/CSS/Day_5/01_flexbox/index.html
+++ b/CSS/Day_5/01_flexbox/index.html
@@ -9,6 +9,11 @@
             width: 100px;
             height: 100px;
         }
+        .container {
+            display: flex;
+            gap: 20px;
+            flex-wrap: wrap;
+        }
     </style>
 </head>
 <body>
