--- a/CSS/Day_7/04_bootstrap_components/solution.html
+++ b/CSS/Day_7/04_bootstrap_components/solution.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+<!-- data-bs-theme="dark" -->
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap Components</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <style>
@@ -51,6 +53,7 @@
           <input class="form-control me-2" type="search" placeholder="Postcode" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Check</button>
         </form>
+        <button class="btn btn-dark ms-2 colormode-btn"><i class="bi bi-sun-fill"></i></button>
       </div>
     </div>
   </nav>
@@ -220,6 +223,7 @@
       </div>
     </footer>
   </div>
+  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
